Estructuracion de la base de datos

--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "pino-multi-stream": "^6.0.0",
     "pino-pretty": "^7.6.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sonic-boom": "^2.8.0"
+    "sequelize": "^6.19.0",
+    "sonic-boom": "^2.8.0",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "eslint": "8.15.0",
