--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
+    "express-jwt": "^7.7.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "next": "12.1.6",
+    "pino-http": "^7.0.0",
     "pino-multi-stream": "^6.0.0",
     "pino-pretty": "^7.6.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sequelize": "^6.19.0",
     "sonic-boom": "^2.8.0",
-    "sqlite3": "^5.0.8"
+    "sqlite3": "^5.0.8",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "eslint": "8.15.0",
