--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express-jwt": "^7.7.0",
+    "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "next": "12.1.6",
