--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "express-jwt": "^7.7.0",
     "express-validator": "^6.14.0",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "next": "12.1.6",
