--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "express-jwt": "^7.7.0",
     "express-validator": "^6.14.0",
@@ -21,7 +22,11 @@
     "pino-multi-stream": "^6.0.0",
     "pino-pretty": "^7.6.1",
     "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "react-pro-sidebar": "^0.7.1",
+    "sass": "^1.51.0",
     "sequelize": "^6.19.0",
     "sonic-boom": "^2.8.0",
     "sqlite3": "^5.0.8",
