--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
+    "rxjs": "^7.5.5",
     "sass": "^1.51.0",
     "sequelize": "^6.19.0",
     "sonic-boom": "^2.8.0",
