--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
@@ -24,6 +25,7 @@
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "rxjs": "^7.5.5",
@@ -31,7 +33,8 @@
     "sequelize": "^6.19.0",
     "sonic-boom": "^2.8.0",
     "sqlite3": "^5.0.8",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.15.0",
