--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.14.0",
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
+    "lottie-react": "^2.2.1",
     "moment": "^2.29.3",
     "next": "12.1.6",
     "pino-http": "^7.0.0",
