--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
   },
   "dependencies": {
     "@hookform/resolvers": "2.8.8",
-    "@reduxjs/toolkit": "1.9.3",
-    "axios": "1.3.4",
+    "@reduxjs/toolkit": "1.9.1",
+    "axios": "1.2.1",
     "bcryptjs": "2.4.3",
     "bootstrap": "5.1.3",
     "dotenv": "16.0.1",
     "express-jwt": "7.7.0",
     "express-validator": "6.14.0",
-    "formik": "^2.2.9",
+    "formik": "2.2.9",
     "json2csv": "5.0.7",
     "jsonwebtoken": "8.5.1",
-    "lottie-react": "2.2.1",
+    "lottie-react": "2.4.0",
     "moment": "2.29.3",
-    "next": "12.1.6",
-    "next-redux-wrapper": "8.1.0",
+    "next": "13.0.6",
+    "next-redux-wrapper": "8.0.0",
     "pino-http": "7.0.0",
     "pino-multi-stream": "6.0.0",
     "pino-pretty": "7.6.1",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-bootstrap": "2.4.0",
-    "react-dom": "18.1.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "7.31.1",
-    "react-icons": "4.3.1",
+    "react-icons": "4.7.1",
     "react-pro-sidebar": "1.0.0",
     "react-redux": "8.0.5",
-    "rxjs": "7.5.5",
+    "rxjs": "7.6.0",
     "sass": "1.51.0",
     "sequelize": "6.19.0",
     "sonic-boom": "2.8.0",
